src/objects/Migrated_Agreement_History__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Migrated Agreement History</relationshipLabel>
        <relationshipName>Migrated_Agreement_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FIELD__c</fullName>
        <label>FIELD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEWVALUE__c</fullName>
        <label>NEWVALUE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLDVALUE__c</fullName>
        <label>OLDVALUE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Migrated Agreement History</label>
    <nameField>
        <label>Migrated Agreement History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migrated Agreement History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>